Present legend labels in rows of two (#3573)
* feat: present legend labels in rows of two

* fix: ts linting

---------
